// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fraggle Rock API navigation should compute both snapshot & timespan results 1`] = `
Array [
  "accesskeys",
  "aria-allowed-attr",
  "aria-command-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr",
  "aria-valid-attr-value",
  "bootup-time",
  "button-name",
  "bypass",
  "canonical",
  "charset",
  "color-contrast",
  "content-width",
  "crawlable-anchors",
  "critical-request-chains",
  "csp-xss",
  "cumulative-layout-shift",
  "custom-controls-labels",
  "custom-controls-roles",
  "definition-list",
  "deprecations",
  "diagnostics",
  "dlitem",
  "doctype",
  "document-title",
  "dom-size",
  "duplicate-id-active",
  "duplicate-id-aria",
  "duplicated-javascript",
  "efficient-animated-content",
  "errors-in-console",
  "final-screenshot",
  "first-contentful-paint",
  "first-meaningful-paint",
  "focus-traps",
  "focusable-controls",
  "font-display",
  "font-size",
  "form-field-multiple-labels",
  "frame-title",
  "full-page-screenshot",
  "geolocation-on-start",
  "heading-order",
  "hreflang",
  "html-has-lang",
  "html-lang-valid",
  "http-status-code",
  "image-alt",
  "image-aspect-ratio",
  "image-size-responsive",
  "input-image-alt",
  "inspector-issues",
  "installable-manifest",
  "interactive",
  "interactive-element-affordance",
  "is-crawlable",
  "is-on-https",
  "js-libraries",
  "label",
  "largest-contentful-paint",
  "largest-contentful-paint-element",
  "layout-shift-elements",
  "lcp-lazy-loaded",
  "legacy-javascript",
  "link-name",
  "link-text",
  "list",
  "listitem",
  "logical-tab-order",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "managed-focus",
  "maskable-icon",
  "max-potential-fid",
  "meta-description",
  "meta-refresh",
  "meta-viewport",
  "metrics",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "no-unload-listeners",
  "no-vulnerable-libraries",
  "non-composited-animations",
  "notification-on-start",
  "object-alt",
  "offscreen-content-hidden",
  "offscreen-images",
  "password-inputs-can-be-pasted-into",
  "performance-budget",
  "plugins",
  "preload-fonts",
  "preload-lcp-image",
  "pwa-cross-browser",
  "pwa-each-page-has-url",
  "pwa-page-transitions",
  "redirects",
  "render-blocking-resources",
  "resource-summary",
  "robots-txt",
  "screenshot-thumbnails",
  "script-treemap-data",
  "server-response-time",
  "service-worker",
  "speed-index",
  "splash-screen",
  "structured-data",
  "tabindex",
  "tap-targets",
  "td-headers-attr",
  "th-has-data-cells",
  "themed-omnibox",
  "third-party-facades",
  "third-party-summary",
  "timing-budget",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "use-landmarks",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-rel-preconnect",
  "uses-rel-preload",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-lang",
  "valid-source-maps",
  "video-caption",
  "viewport",
  "visual-order-follows-dom",
]
`;

exports[`Fraggle Rock API navigation should compute results with callback requestor 1`] = `
Array [
  "accesskeys",
  "aria-allowed-attr",
  "aria-command-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr",
  "aria-valid-attr-value",
  "bootup-time",
  "button-name",
  "bypass",
  "canonical",
  "charset",
  "color-contrast",
  "content-width",
  "crawlable-anchors",
  "critical-request-chains",
  "csp-xss",
  "cumulative-layout-shift",
  "custom-controls-labels",
  "custom-controls-roles",
  "definition-list",
  "deprecations",
  "diagnostics",
  "dlitem",
  "doctype",
  "document-title",
  "dom-size",
  "duplicate-id-active",
  "duplicate-id-aria",
  "duplicated-javascript",
  "efficient-animated-content",
  "errors-in-console",
  "final-screenshot",
  "first-contentful-paint",
  "first-meaningful-paint",
  "focus-traps",
  "focusable-controls",
  "font-display",
  "font-size",
  "form-field-multiple-labels",
  "frame-title",
  "full-page-screenshot",
  "geolocation-on-start",
  "heading-order",
  "hreflang",
  "html-has-lang",
  "html-lang-valid",
  "http-status-code",
  "image-alt",
  "image-aspect-ratio",
  "image-size-responsive",
  "input-image-alt",
  "inspector-issues",
  "installable-manifest",
  "interactive",
  "interactive-element-affordance",
  "is-crawlable",
  "is-on-https",
  "js-libraries",
  "label",
  "largest-contentful-paint",
  "largest-contentful-paint-element",
  "layout-shift-elements",
  "lcp-lazy-loaded",
  "legacy-javascript",
  "link-name",
  "link-text",
  "list",
  "listitem",
  "logical-tab-order",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "managed-focus",
  "maskable-icon",
  "max-potential-fid",
  "meta-description",
  "meta-refresh",
  "meta-viewport",
  "metrics",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "no-unload-listeners",
  "no-vulnerable-libraries",
  "non-composited-animations",
  "notification-on-start",
  "object-alt",
  "offscreen-content-hidden",
  "offscreen-images",
  "password-inputs-can-be-pasted-into",
  "performance-budget",
  "plugins",
  "preload-fonts",
  "preload-lcp-image",
  "pwa-cross-browser",
  "pwa-each-page-has-url",
  "pwa-page-transitions",
  "redirects",
  "render-blocking-resources",
  "resource-summary",
  "robots-txt",
  "screenshot-thumbnails",
  "script-treemap-data",
  "server-response-time",
  "service-worker",
  "speed-index",
  "splash-screen",
  "structured-data",
  "tabindex",
  "tap-targets",
  "td-headers-attr",
  "th-has-data-cells",
  "themed-omnibox",
  "third-party-facades",
  "third-party-summary",
  "timing-budget",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "use-landmarks",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-rel-preconnect",
  "uses-rel-preload",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-lang",
  "valid-source-maps",
  "video-caption",
  "viewport",
  "visual-order-follows-dom",
]
`;

exports[`Fraggle Rock API snapshot should compute accessibility results on the page as-is 1`] = `
Array [
  "accesskeys",
  "aria-allowed-attr",
  "aria-command-name",
  "aria-hidden-body",
  "aria-hidden-focus",
  "aria-input-field-name",
  "aria-meter-name",
  "aria-progressbar-name",
  "aria-required-attr",
  "aria-required-children",
  "aria-required-parent",
  "aria-roles",
  "aria-toggle-field-name",
  "aria-tooltip-name",
  "aria-treeitem-name",
  "aria-valid-attr",
  "aria-valid-attr-value",
  "button-name",
  "bypass",
  "color-contrast",
  "crawlable-anchors",
  "custom-controls-labels",
  "custom-controls-roles",
  "definition-list",
  "dlitem",
  "doctype",
  "document-title",
  "dom-size",
  "duplicate-id-active",
  "duplicate-id-aria",
  "focus-traps",
  "focusable-controls",
  "font-size",
  "form-field-multiple-labels",
  "frame-title",
  "full-page-screenshot",
  "heading-order",
  "html-has-lang",
  "html-lang-valid",
  "image-alt",
  "image-aspect-ratio",
  "image-size-responsive",
  "input-image-alt",
  "interactive-element-affordance",
  "js-libraries",
  "label",
  "link-name",
  "link-text",
  "list",
  "listitem",
  "logical-tab-order",
  "managed-focus",
  "meta-description",
  "meta-refresh",
  "meta-viewport",
  "no-vulnerable-libraries",
  "object-alt",
  "offscreen-content-hidden",
  "password-inputs-can-be-pasted-into",
  "plugins",
  "robots-txt",
  "structured-data",
  "tabindex",
  "tap-targets",
  "td-headers-attr",
  "th-has-data-cells",
  "unsized-images",
  "use-landmarks",
  "uses-responsive-images-snapshot",
  "valid-lang",
  "video-caption",
  "viewport",
  "visual-order-follows-dom",
]
`;

exports[`Fraggle Rock API startTimespan should compute ConsoleMessage results across a span of time 1`] = `
Array [
  "bootup-time",
  "cumulative-layout-shift",
  "deprecations",
  "duplicated-javascript",
  "efficient-animated-content",
  "errors-in-console",
  "experimental-interaction-to-next-paint",
  "final-screenshot",
  "full-page-screenshot",
  "image-aspect-ratio",
  "image-size-responsive",
  "inspector-issues",
  "is-on-https",
  "layout-shift-elements",
  "legacy-javascript",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "no-unload-listeners",
  "non-composited-animations",
  "preload-fonts",
  "resource-summary",
  "screenshot-thumbnails",
  "script-treemap-data",
  "third-party-summary",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-source-maps",
  "work-during-interaction",
]
`;

exports[`Fraggle Rock API startTimespan should compute ConsoleMessage results across a span of time 2`] = `
Array [
  "non-composited-animations",
  "preload-fonts",
  "third-party-summary",
  "unsized-images",
  "user-timings",
]
`;

exports[`Fraggle Rock API startTimespan should compute results from timespan after page load 1`] = `
Array [
  "bootup-time",
  "cumulative-layout-shift",
  "deprecations",
  "duplicated-javascript",
  "efficient-animated-content",
  "errors-in-console",
  "experimental-interaction-to-next-paint",
  "final-screenshot",
  "full-page-screenshot",
  "image-aspect-ratio",
  "image-size-responsive",
  "inspector-issues",
  "is-on-https",
  "layout-shift-elements",
  "legacy-javascript",
  "long-tasks",
  "main-thread-tasks",
  "mainthread-work-breakdown",
  "modern-image-formats",
  "network-requests",
  "network-rtt",
  "network-server-latency",
  "no-document-write",
  "no-unload-listeners",
  "non-composited-animations",
  "preload-fonts",
  "resource-summary",
  "screenshot-thumbnails",
  "script-treemap-data",
  "third-party-summary",
  "total-blocking-time",
  "total-byte-weight",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "user-timings",
  "uses-http2",
  "uses-long-cache-ttl",
  "uses-optimized-images",
  "uses-passive-event-listeners",
  "uses-responsive-images",
  "uses-text-compression",
  "valid-source-maps",
  "work-during-interaction",
]
`;

exports[`Fraggle Rock API startTimespan should compute results from timespan after page load 2`] = `
Array [
  "duplicated-javascript",
  "efficient-animated-content",
  "legacy-javascript",
  "modern-image-formats",
  "network-rtt",
  "network-server-latency",
  "non-composited-animations",
  "preload-fonts",
  "third-party-summary",
  "unminified-css",
  "unminified-javascript",
  "unsized-images",
  "unused-css-rules",
  "unused-javascript",
  "user-timings",
  "uses-optimized-images",
  "uses-responsive-images",
  "uses-text-compression",
]
`;
